@@ -595,7 +595,6 @@ extern "C" int doAbout(gpointer data)
 	gtk_about_dialog_set_logo_icon_name(about,ABOUTICON);
 	gtk_about_dialog_set_license(about,licence);
 	gtk_about_dialog_set_translator_credits(about,(const gchar*)translators);
-
 	gtk_window_set_transient_for((GtkWindow*)about,(GtkWindow*)plugdata->prefsWindow);
 
 	gtk_dialog_run(GTK_DIALOG(about));
@@ -603,7 +602,6 @@ extern "C" int doAbout(gpointer data)
 	debugFree(&licence);
 	debugFree(&licencepath);
 	free(translators);
-
 	setTextDomain(false,plugdata);
 	return(0);
 }
