@@ -1,4 +1,5 @@
 0.4.0
+About window now modal.
 Corrected a few menu labels.
 Made session manager name box modal.
 Standardized about boxes.
